#73 Fix overlap of place bet section with footer

--- a/resources/sass/app/pages/tournament/_bets.scss
+++ b/resources/sass/app/pages/tournament/_bets.scss
@@ -39,7 +39,6 @@
         }
 
         .tab-footer-frm {
-            z-index: 1;
             background-color: $gb_color_white98;
             padding: 1rem;
             @include box-shadow(0.2);
